--- a/index.html
+++ b/index.html
@@ -1,43 +1,50 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
     <title></title>
-    <meta name="author" content="">
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="style.css" rel="stylesheet">
+    <meta name="author" content="" />
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="style.css" rel="stylesheet" />
     <script src="script.js" defer></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <nav>
-        <h1>Online Shop</h1>
+      <h1>Online Shop</h1>
     </nav>
 
     <main>
-
-
-        <h2>Our products</h2>
-        <div id="products">
-            <p>Description</p>
-            <span>100€</span>
+      <h2>Our products</h2>
+      <div id="products">
+        <p>Description</p>
+        <span>100€</span>
+      </div>
+      <h2>Cart</h2>
+      <div id="cart">
+        <ul>
+          <!-- <li>Article 1</li> -->
+        </ul>
+        <div class="buy" id="haut">
+          <h3>Prix</h3>
+          <h3>Quantité</h3>
         </div>
-        <h2>Cart</h2>
-        <div id="cart">
-            <ul>
-                <!-- <li>Article 1</li> -->
-            </ul>
-            <p>Total : 00€</p>
+        <div class="grande">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit explicabo, reprehenderit nemo ut quae nostrum fugit reiciendis labore rem enim amet vitae voluptatum quia impedit iusto ad magni eum aliquam.
         </div>
-
+        <div class="buy" id="bas">
+          <p>Total : 00$</p>
+          <img src="images/cb_icon.png" alt="cb_icon" width="10%">
+          <img src="images/paypal_icon.png" alt="" width="10%">
+        </div>
+      </div>
     </main>
 
     <footer>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis sunt illum in. Magnam non odit ex ipsum
-        voluptatibus atque unde mollitia saepe laborum iste sit corporis iusto consequuntur, quasi delectus?
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis sunt
+      illum in. Magnam non odit ex ipsum voluptatibus atque unde mollitia saepe
+      laborum iste sit corporis iusto consequuntur, quasi delectus?
     </footer>
-</body>
-
+  </body>
 </html>
