add flex in products html & css

--- a/index.html
+++ b/index.html
@@ -21,8 +21,30 @@
 
         <h2>Our products</h2>
         <div id="products">
-            <p>Description</p>
-            <span>100€</span>
+            <div class="watches">
+                <p>Description</p>
+                <span>100€</span>
+            </div>
+            <div class="watches">
+                <p>Description</p>
+                <span>100€</span>
+            </div>
+            <div class="watches">
+                <p>Description</p>
+                <span>100€</span>
+            </div>
+            <div class="watches">
+                <p>Description</p>
+                <span>100€</span>
+            </div>
+            <div class="watches">
+                <p>Description</p>
+                <span>100€</span>
+            </div>
+            <div class="watches">
+                <p>Description</p>
+                <span>100€</span>
+            </div>
         </div>
         <h2>Cart</h2>
         <div id="cart">
