changed css Selector

--- a/index.html
+++ b/index.html
@@ -26,18 +26,23 @@
         <ul>
           <!-- <li>Article 1</li> -->
         </ul>
-        <div class="buy" id="haut">
+        <header>
+          <!-- header -->
           <h3>Prix</h3>
           <h3>Quantité</h3>
+        </header>
+        <div>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit
+          explicabo, reprehenderit nemo ut quae nostrum fugit reiciendis labore
+          rem enim amet vitae voluptatum quia impedit iusto ad magni eum
+          aliquam.
         </div>
-        <div class="grande">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit explicabo, reprehenderit nemo ut quae nostrum fugit reiciendis labore rem enim amet vitae voluptatum quia impedit iusto ad magni eum aliquam.
-        </div>
-        <div class="buy" id="bas">
+        <footer>
+          <!-- footer -->
           <p>Total : 00$</p>
-          <img src="images/cb_icon.png" alt="cb_icon" width="10%">
-          <img src="images/paypal_icon.png" alt="" width="10%">
-        </div>
+          <img src="images/cb_icon.png" alt="cb_icon" width="10%" />
+          <img src="images/paypal_icon.png" alt="" width="10%" />
+        </footer>
       </div>
     </main>
 
