--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <title></title>
     <meta name="author" content="" />
@@ -9,68 +8,73 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="style.css" rel="stylesheet" />
     <script src="script.js" defer></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <nav>
-        <h1>Online Shop</h1>
+      <h1>Online Shop</h1>
     </nav>
 
     <main>
-        <h2>Our products</h2>
-        <div id="products">
-            <div class="watches">
-                <p>Description</p>
-                <span>100€</span>
-            </div>
-            <div class="watches">
-                <p>Description</p>
-                <span>100€</span>
-            </div>
-            <div class="watches">
-                <p>Description</p>
-                <span>100€</span>
-            </div>
-            <div class="watches">
-                <p>Description</p>
-                <span>100€</span>
-            </div>
-            <div class="watches">
-                <p>Description</p>
-                <span>100€</span>
-            </div>
-            <div class="watches">
-                <p>Description</p>
-                <span>100€</span>
-            </div>
+      <h2>Our products</h2>
+      <div id="products">
+        <div class="watches">
+          <p>Description</p>
+          <span>100€</span>
         </div>
-        <h2>Cart</h2>
-        <div id="cart">
-            <ul>
-                <!-- <li>Article 1</li> -->
-            </ul>
-            <header>
-                <h3>Prix</h3>
-                <h3>Quantité</h3>
-            </header>
-            <div>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit explicabo, reprehenderit nemo ut quae
-                nostrum fugit reiciendis labore rem enim amet vitae voluptatum quia impedit iusto ad magni eum aliquam.
-            </div>
-            <footer>
-                <p>Total : 00$</p>
-                <img src="images/cb_icon.png" alt="cb_icon" width="10%">
-                <img src="images/paypal_icon.png" alt="" width="10%">
-            </footer>
+        <div class="watches">
+          <p>Description</p>
+          <span>100€</span>
         </div>
-      
+        <div class="watches">
+          <p>Description</p>
+          <span>100€</span>
+        </div>
+        <div class="watches">
+          <p>Description</p>
+          <span>100€</span>
+        </div>
+        <div class="watches">
+          <p>Description</p>
+          <span>100€</span>
+        </div>
+        <div class="watches">
+          <p>Description</p>
+          <span>100€</span>
+        </div>
+      </div>
+      <h2>Cart</h2>
+      <div id="cart">
+        <header>
+          <div></div>
+          <span>Prix</span>
+          <span>Quantité</span>
+          <div></div>
+        </header>
+        <div class="grande">
+          <ul>
+            <li>
+              <div></div>
+              <p>50$</p>
+              <span class="mlp"><button>+</button>5<button>-</button></span>
+              <div></div>
+            </li>
+          </ul>
+        </div>
+        <footer>
+          <p>Total : 00$</p>
+        </footer>
+        <div class="payement">
+          <img src="images/cb_icon.png" alt="cb_icon" width="10%" />
+          <img src="images/paypal_icon.png" alt="" width="10%" />
+        </div>
+      </div>
     </main>
 
     <footer>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis sunt
-        illum in. Magnam non odit ex ipsum voluptatibus atque unde mollitia saepe
-        laborum iste sit corporis iusto consequuntur, quasi delectus?
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis sunt
+      illum in. Magnam non odit ex ipsum voluptatibus atque unde mollitia saepe
+      laborum iste sit corporis iusto consequuntur, quasi delectus?
     </footer>
-</body>
-
+  </body>
 </html>
