add article and some effects and animation (blur, scale)

--- a/index.html
+++ b/index.html
@@ -20,28 +20,46 @@
         <h2>Our products</h2>
         <div id="products">
             <div class="watches">
-                <p>Description</p>
-                <span>100€</span>
+                <img src="images/montre1.png" alt="montre1">
+                <div>
+                    <p>Description</p>
+                    <p>100€</p>
+                </div>
             </div>
             <div class="watches">
-                <p>Description</p>
-                <span>100€</span>
+                <img src="images/montre2.png" alt="montre2">
+                <div>
+                    <p>Description</p>
+                    <p>100€</p>
+                </div>
             </div>
             <div class="watches">
-                <p>Description</p>
-                <span>100€</span>
+                <img src="images/montre3.png" alt="montre3">
+                <div>
+                    <p>Description</p>
+                    <p>100€</p>
+                </div>
             </div>
             <div class="watches">
-                <p>Description</p>
-                <span>100€</span>
+                <img src="images/montre4.png" alt="montre4">
+                <div>
+                    <p>Description</p>
+                    <p>100€</p>
+                </div>
             </div>
             <div class="watches">
-                <p>Description</p>
-                <span>100€</span>
+                <img src="images/montre5.png" alt="montre5">
+                <div>
+                    <p>Description</p>
+                    <p>100€</p>
+                </div>
             </div>
             <div class="watches">
-                <p>Description</p>
-                <span>100€</span>
+                <img src="images/montre6.png" alt="montre6">
+                <div>
+                    <p>Description</p>
+                    <p>100€</p>
+                </div>
             </div>
         </div>
         <h2>Cart</h2>
@@ -63,7 +81,7 @@
                 <img src="images/paypal_icon.png" alt="" width="10%">
             </footer>
         </div>
-      
+
     </main>
 
     <footer>
