fixed style cart

--- a/index.html
+++ b/index.html
@@ -89,6 +89,12 @@
                         <span class="mlp"><button>+</button>5<button>-</button></span>
                         <div></div>
                     </li>
+                    <li>
+                      <div></div>
+                      <p>50$</p>
+                      <span class="mlp"><button>+</button>5<button>-</button></span>
+                      <div></div>
+                  </li>
                 </ul>
             </div>
             <footer>
@@ -96,7 +102,7 @@
             </footer>
             <div class="payement">
                 <img src="images/cb_icon.png" alt="cb_icon" width="10%" />
-                <img src="images/paypal_icon.png" alt="" width="10%" />
+                <img src="images/paypal_icon_2.png" alt="" width="10%" />
             </div>
         </div>
     </main>
