add price, input and buttons on products, add short product description too

--- a/index.html
+++ b/index.html
@@ -32,44 +32,50 @@
         <div id="products">
             <div class="watches">
                 <img src="images/montre1.png" alt="montre1">
+                <span>ROLEX VERY EXPENSIVE</span>
                 <div>
-                    <p>Description</p>
-                    <p>100€</p>
+                    <p>Price $ <button>-</button><input type="number" min="1"
+                            max="99"><button>+</button><button>ADD</button></p>
                 </div>
             </div>
             <div class="watches">
                 <img src="images/montre2.png" alt="montre2">
+                <span>ROLEX VERY EXPENSIVE</span>
                 <div>
-                    <p>Description</p>
-                    <p>100€</p>
+                    <p>Price $ <button>-</button><input type="number" min="1"
+                            max="99"><button>+</button><button>ADD</button></p>
                 </div>
             </div>
             <div class="watches">
                 <img src="images/montre3.png" alt="montre3">
+                <span>ROLEX VERY EXPENSIVE</span>
                 <div>
-                    <p>Description</p>
-                    <p>100€</p>
+                    <p>Price $ <button>-</button><input type="number" min="1"
+                            max="99"><button>+</button><button>ADD</button></p>
                 </div>
             </div>
             <div class="watches">
                 <img src="images/montre4.png" alt="montre4">
+                <span>ROLEX VERY EXPENSIVE</span>
                 <div>
-                    <p>Description</p>
-                    <p>100€</p>
+                    <p>Price $ <button>-</button><input type="number" min="1"
+                            max="99"><button>+</button><button>ADD</button></p>
                 </div>
             </div>
             <div class="watches">
                 <img src="images/montre5.png" alt="montre5">
+                <span>ROLEX VERY EXPENSIVE</span>
                 <div>
-                    <p>Description</p>
-                    <p>100€</p>
+                    <p>Price $ <button>-</button><input type="number" min="1"
+                            max="99"><button>+</button><button>ADD</button></p>
                 </div>
             </div>
             <div class="watches">
                 <img src="images/montre6.png" alt="montre6">
+                <span>ROLEX VERY EXPENSIVE</span>
                 <div>
-                    <p>Description</p>
-                    <p>100€</p>
+                    <p>Price $ <button>-</button><input type="number" min="1"
+                            max="99"><button>+</button><button>ADD</button></p>
                 </div>
             </div>
         </div>
@@ -90,11 +96,11 @@
                         <div></div>
                     </li>
                     <li>
-                      <div></div>
-                      <p>50$</p>
-                      <span class="mlp"><button>+</button>5<button>-</button></span>
-                      <div></div>
-                  </li>
+                        <div></div>
+                        <p>50$</p>
+                        <span class="mlp"><button>+</button>5<button>-</button></span>
+                        <div></div>
+                    </li>
                 </ul>
             </div>
             <footer>
