cart font size and elem size footer to right

--- a/index.html
+++ b/index.html
@@ -117,48 +117,42 @@
                         <p>50$</p>
                         <span class="mlp"><button>+</button><input type="number" size="2" min="1"
                                 max="5"><button>-</button></span>
-                        <div><button id="monBtn" class="btn"><img src="images/delete.png" alt="icone" width="30px"
-                                    height="30px"></button></div>
+                        <div><button id="monBtn" class="btn"><img src="images/delete.png" alt="icone"></button></div>
                     </li>
                     <li>
                         <div><img src="images/montre2.png" width="30px" height="30px"></div>
                         <p>50$</p>
                         <span class="mlp"><button>+</button><input type="number" size="2" min="1"
                                 max="5"><button>-</button></span>
-                        <div><button id="monBtn" class="btn"><img src="images/delete.png" alt="icone" width="30px"
-                                    height="30px"></button></div>
+                        <div><button id="monBtn" class="btn"><img src="images/delete.png" alt="icone"></button></div>
                     </li>
                     <li>
                         <div><img src="images/montre2.png" width="30px" height="30px"></div>
                         <p>50$</p>
                         <span class="mlp"><button>+</button><input type="number" size="2" min="1"
                                 max="5"><button>-</button></span>
-                        <div><button id="monBtn" class="btn"><img src="images/delete.png" alt="icone" width="30px"
-                                    height="30px"></button></div>
+                        <div><button id="monBtn" class="btn"><img src="images/delete.png" alt="icone"></button></div>
                     </li>
                     <li>
                         <div><img src="images/montre2.png" width="30px" height="30px"></div>
                         <p>50$</p>
                         <span class="mlp"><button>+</button><input type="number" size="2" min="1"
                                 max="5"><button>-</button></span>
-                        <div><button id="monBtn" class="btn"><img src="images/delete.png" alt="icone" width="30px"
-                                    height="30px"></button></div>
+                        <div><button id="monBtn" class="btn"><img src="images/delete.png" alt="icone"></button></div>
                     </li>
                     <li>
                         <div><img src="images/montre2.png" width="30px" height="30px"></div>
                         <p>50$</p>
                         <span class="mlp"><button>+</button><input type="number" size="2" min="1"
                                 max="5"><button>-</button></span>
-                        <div><button id="monBtn" class="btn"><img src="images/delete.png" alt="icone" width="30px"
-                                    height="30px"></button></div>
+                        <div><button id="monBtn" class="btn"><img src="images/delete.png" alt="icone"></button></div>
                     </li>
                     <li>
                         <div><img src="images/montre2.png" width="30px" height="30px"></div>
                         <p>50$</p>
                         <span class="mlp"><button>+</button><input type="number" size="2" min="1"
                                 max="5"><button>-</button></span>
-                        <div><button id="monBtn" class="btn"><img src="images/delete.png" alt="icone" width="30px"
-                                    height="30px"></button></div>
+                        <div><button id="monBtn" class="btn"><img src="images/delete.png" alt="icone"></button></div>
                     </li>
                 </ul>
             </div>
@@ -173,7 +167,9 @@
     </main>
 
     <footer>
-        <a href="" target="blank">
+        <div></div>
+        <div>
+            <a href="" target="blank">
             <img class="logo" src="./images/instagram_logo.png" alt="instagram" /></a>
         <a href="" target="blank">
             <img class="logo" src="./images/facebook_logo.png" alt="facebook" /></a>
@@ -181,7 +177,8 @@
             <img class="logo" src="./images/twitter_logo.png" alt="twitter" /></a>
         <a href="" target="blank">
             <img class="logo" src="./images/youtube_logo.png" alt="youtube" /></a>
-
+        </div>
+        
     </footer>
 </body>
 
