add some js and fix flex in watches div

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>The Watches</title>
     <meta name="author" content="" />
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -43,48 +43,48 @@
                 <img src="images/montre1.png" alt="montre1">
                 <span>ROLEX VERY EXPENSIVE</span>
                 <div>
-                    <p>Price $ <button>-</button><input type="number" min="1"
-                            max="99"><button>+</button><button>ADD</button></p>
+                    <p>Price $ </p><button>-</button><input type="number" min="1"
+                        max="99"><button>+</button><button>ADD</button>
                 </div>
             </div>
             <div class="watches">
                 <img src="images/montre2.png" alt="montre2">
                 <span>ROLEX VERY EXPENSIVE</span>
                 <div>
-                    <p>Price $ <button>-</button><input type="number" min="1"
-                            max="99"><button>+</button><button>ADD</button></p>
+                    <p>Price $ </p><button>-</button><input type="number" min="1"
+                        max="99"><button>+</button><button>ADD</button>
                 </div>
             </div>
             <div class="watches">
                 <img src="images/montre3.png" alt="montre3">
                 <span>ROLEX VERY EXPENSIVE</span>
                 <div>
-                    <p>Price $ <button>-</button><input type="number" min="1"
-                            max="99"><button>+</button><button>ADD</button></p>
+                    <p>Price $ </p><button>-</button><input type="number" min="1"
+                        max="99"><button>+</button><button>ADD</button>
                 </div>
             </div>
             <div class="watches">
                 <img src="images/montre4.png" alt="montre4">
                 <span>ROLEX VERY EXPENSIVE</span>
                 <div>
-                    <p>Price $ <button>-</button><input type="number" min="1"
-                            max="99"><button>+</button><button>ADD</button></p>
+                    <p>Price $ </p><button>-</button><input type="number" min="1"
+                        max="99"><button>+</button><button>ADD</button>
                 </div>
             </div>
             <div class="watches">
                 <img src="images/montre5.png" alt="montre5">
                 <span>ROLEX VERY EXPENSIVE</span>
                 <div>
-                    <p>Price $ <button>-</button><input type="number" min="1"
-                            max="99"><button>+</button><button>ADD</button></p>
+                    <p>Price $ </p><button>-</button><input type="number" min="1"
+                        max="99"><button>+</button><button>ADD</button>
                 </div>
             </div>
             <div class="watches">
                 <img src="images/montre6.png" alt="montre6">
                 <span>ROLEX VERY EXPENSIVE</span>
                 <div>
-                    <p>Price $ <button>-</button><input type="number" min="1"
-                            max="99"><button>+</button><button>ADD</button></p>
+                    <p>Price $ </p><button>-</button><input type="number" min="1"
+                        max="99"><button>+</button><button>ADD</button>
                 </div>
             </div>
         </div>
