--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <title>The Watches</title>
     <meta name="author" content="" />
@@ -13,226 +12,271 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap"
+      rel="stylesheet"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Great+Vibes&display=swap"
-        rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet" />
-</head>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Great+Vibes&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
+  <body>
     <nav>
-        <div></div>
-        <div id="brandname">
-            <h1>The Watches</h1>
-            <h5>Swiss made &reg;</h5>
-        </div>
+      <div></div>
+      <div id="brandname">
+        <h1>The Watches</h1>
+        <h5>Swiss made &reg;</h5>
+      </div>
 
-        <div id="nav_logo">
-            <a href=""><img class="logo" src="images/home_logo.png" alt="home logo" /></a>
-            <a href=""><img class="logo" src="images/account_logo.png" alt="account logo" /></a>
-            <a href=""><img class="logo" src="images/cart_logo.png" alt="cart logo" /></a>
-        </div>
+      <div id="nav_logo">
+        <a href=""
+          ><img class="logo" src="images/home_logo.png" alt="home logo"
+        /></a>
+        <a href=""
+          ><img class="logo" src="images/account_logo.png" alt="account logo"
+        /></a>
+        <a href=""
+          ><img class="logo" src="images/cart_logo.png" alt="cart logo"
+        /></a>
+      </div>
     </nav>
 
     <main>
-        <h2>Our products</h2>
-        <div id="products">
-            <div class="watches">
-                <img src="images/montre1.png" alt="montre1">
-                <span>ROLEX VERY EXPENSIVE</span>
-                <div>
-                    <p>Price $ </p><button>-</button><input type="number" min="1"
-                        max="99"><button>+</button><button>ADD</button>
-                </div>
-            </div>
-            <div class="watches">
-                <img src="images/montre2.png" alt="montre2">
-                <span>ROLEX VERY EXPENSIVE</span>
-                <div>
-                    <p>Price $ </p><button>-</button><input type="number" min="1"
-                        max="99"><button>+</button><button>ADD</button>
-                </div>
-            </div>
-            <div class="watches">
-                <img src="images/montre3.png" alt="montre3">
-                <span>ROLEX VERY EXPENSIVE</span>
-                <div>
-                    <p>Price $ </p><button>-</button><input type="number" min="1"
-                        max="99"><button>+</button><button>ADD</button>
-                </div>
-            </div>
-            <div class="watches">
-                <img src="images/montre4.png" alt="montre4">
-                <span>ROLEX VERY EXPENSIVE</span>
-                <div>
-                    <p>Price $ </p><button>-</button><input type="number" min="1"
-                        max="99"><button>+</button><button>ADD</button>
-                </div>
-            </div>
-            <div class="watches">
-                <img src="images/montre5.png" alt="montre5">
-                <span>ROLEX VERY EXPENSIVE</span>
-                <div>
-                    <p>Price $ </p><button>-</button><input type="number" min="1"
-                        max="99"><button>+</button><button>ADD</button>
-                </div>
-            </div>
-            <div class="watches">
-                <img src="images/montre6.png" alt="montre6">
-                <span>ROLEX VERY EXPENSIVE</span>
-                <div>
-                    <p>Price $ </p><button>-</button><input type="number" min="1"
-                        max="99"><button>+</button><button>ADD</button>
-                </div>
-            </div>
+      <h2>Our products</h2>
+      <div id="products">
+        <div class="watches">
+          <img src="images/montre1.png" alt="montre1" />
+          <span>ROLEX VERY EXPENSIVE</span>
+          <div>
+            <p>Price $</p>
+            <button>-</button>
+            <input type="number" min="1" max="99"/>
+            <button>+</button>
+            <button>ADD</button>
+          </div>
         </div>
-        <h2>Cart</h2>
-        <div id="cart">
-            <header>
-                <div></div>
-                <span>Prix</span>
-                <span>Quantité</span>
-                <div></div>
-            </header>
-            <div class="grande">
-                <ul>
-                    <li>
-                        <div>
-                            <img src="images/montre2.png" alt="icone" class="montre-cart" />
-                        </div>
-                        <p>50$</p>
-                        <span><button>-</button><input type="number" min="1" max="99"><button>
-                                +
-                            </button></span>
-                        <div>
-                            <button class="btn">
-                                <img src="images/delete.png" />
-                            </button>
-                        </div>
-                    </li>
-                    <li>
-                        <div>
-                            <img src="images/montre2.png" alt="icone" class="montre-cart" />
-                        </div>
-                        <p>50$</p>
-                        <span><button>-</button><input type="number" min="1" max="99"><button>
-                                +
-                            </button></span>
-                        <div>
-                            <button class="btn">
-                                <img src="images/delete.png" />
-                            </button>
-                        </div>
-                    </li>
-                    <li>
-                        <div>
-                            <img src="images/montre2.png" alt="icone" class="montre-cart" />
-                        </div>
-                        <p>50$</p>
-                        <span><button>-</button><input type="number" min="1" max="99"><button>
-                                +
-                            </button></span>
-                        <div>
-                            <button class="btn">
-                                <img src="images/delete.png" alt="icone" />
-                            </button>
-                        </div>
-                    </li>
-                    <li>
-                        <div>
-                            <img src="images/montre2.png" alt="icone" class="montre-cart" />
-                        </div>
-                        <p>50$</p>
-                        <span><button>-</button><input type="number" min="1" max="99"><button>
-                                +
-                            </button></span>
-                        <div>
-                            <button class="btn">
-                                <img src="images/delete.png" alt="icone" />
-                            </button>
-                        </div>
-                    </li>
-                    <li>
-                        <div>
-                            <img src="images/montre2.png" alt="icone" class="montre-cart" />
-                        </div>
-                        <p>50$</p>
-                        <span><button>-</button><input type="number" min="1" max="99"><button>
-                                +
-                            </button></span>
-                        <div>
-                            <button class="btn">
-                                <img src="images/delete.png" alt="icone" />
-                            </button>
-                        </div>
-                    </li>
-                    <li>
-                        <div>
-                            <img src="images/montre2.png" alt="icone" class="montre-cart" />
-                        </div>
-                        <p>50$</p>
-                        <span><button>-</button><input type="number" min="1" max="99"><button>
-                                +
-                            </button></span>
-                        <div>
-                            <button class="btn">
-                                <img src="images/delete.png" alt="icone" />
-                            </button>
-                        </div>
-                    </li>
-                    <li>
-                        <div>
-                            <img src="images/montre2.png" alt="icone" class="montre-cart" />
-                        </div>
-                        <p>50$</p>
-                        <span><button>-</button><input type="number" min="1" max="99"><button>+
-                            </button></span>
-                        <div>
-                            <button class="btn">
-                                <img src="images/delete.png" alt="icone" />
-                            </button>
-                        </div>
-                    </li>
-                    <li>
-                        <div>
-                            <img src="images/montre2.png" alt="icone" class="montre-cart" />
-                        </div>
-                        <p>50$</p>
-                        <span>
-                            <button>-</button>
-                            <input type="number" min="1" max="99">
-                            <button>+</button>
-                        </span>
-                        <div>
-                            <button class="btn">
-                                <img src="images/delete.png" alt="icone" />
-                            </button>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-            <footer>
-                <p>Total : 00$</p>
-            </footer>
-            <div class="payement">
-                <img src="images/cb_icon.png" alt="cb_icon" width="10%" />
-                <img src="images/paypal_icon_2.png" alt="" width="10%" />
-            </div>
+        <div class="watches">
+          <img src="images/montre2.png" alt="montre2" />
+          <span>ROLEX VERY EXPENSIVE</span>
+          <div>
+            <p>Price $</p>
+            <button>-</button>
+            <input type="number" min="1" max="99" />
+            <button>+</button>
+            <button>ADD</button>
+          </div>
         </div>
+        <div class="watches">
+          <img src="images/montre3.png" alt="montre3" />
+          <span>ROLEX VERY EXPENSIVE</span>
+          <div>
+            <p>Price $</p>
+            <button>-</button><input type="number" min="1" max="99" /><button>
+              +</button
+            ><button>ADD</button>
+          </div>
+        </div>
+        <div class="watches">
+          <img src="images/montre4.png" alt="montre4" />
+          <span>ROLEX VERY EXPENSIVE</span>
+          <div>
+            <p>Price $</p>
+            <button>-</button><input type="number" min="1" max="99" /><button>+</button
+            ><button>ADD</button>
+          </div>
+        </div>
+        <div class="watches">
+          <img src="images/montre5.png" alt="montre5" />
+          <span>ROLEX VERY EXPENSIVE</span>
+          <div>
+            <p>Price $</p>
+            <button>-</button><input type="number" min="1" max="99" /><button>
+              +</button
+            ><button>ADD</button>
+          </div>
+        </div>
+        <div class="watches">
+          <img src="images/montre6.png" alt="montre6" />
+          <span>ROLEX VERY EXPENSIVE</span>
+          <div>
+            <p>Price $</p>
+            <button>-</button><input type="number" min="1" max="99" /><button>
+              +</button
+            ><button>ADD</button>
+          </div>
+        </div>
+      </div>
+      <h2>Cart</h2>
+      <div id="cart">
+        <header>
+          <div></div>
+          <span>Prix</span>
+          <span>Quantité</span>
+          <div></div>
+        </header>
+        <div class="grande">
+          <ul>
+            <li>
+              <div>
+                <img src="images/montre2.png" alt="icone" class="montre-cart" />
+              </div>
+              <p>50$</p>
+              <span>
+                <button>-</button>
+                <input type="number" min="1" max="99" />
+                <button>+</button>
+              </span>
+              <div>
+                <button class="btn">
+                  <img src="images/delete.png" />
+                </button>
+              </div>
+            </li>
+            <li>
+              <div>
+                <img src="images/montre2.png" alt="icone" class="montre-cart" />
+              </div>
+              <p>50$</p>
+              <span>
+                <button>-</button>
+                <input type="number" min="1" max="99" />
+                <button>+</button>
+              </span>
+              <div>
+                <button class="btn">
+                  <img src="images/delete.png" />
+                </button>
+              </div>
+            </li>
+            <li>
+              <div>
+                <img src="images/montre2.png" alt="icone" class="montre-cart" />
+              </div>
+              <p>50$</p>
+              <span>
+                <button>-</button>
+                <input type="number" min="1" max="99" />
+                <button>+</button>
+              </span>
+              <div>
+                <button class="btn">
+                  <img src="images/delete.png" alt="icone" />
+                </button>
+              </div>
+            </li>
+            <li>
+              <div>
+                <img src="images/montre2.png" alt="icone" class="montre-cart" />
+              </div>
+              <p>50$</p>
+              <span>
+                <button>-</button>
+                <input type="number" min="1" max="99" />
+                <button>+</button></span
+              >
+              <div>
+                <button class="btn">
+                  <img src="images/delete.png" alt="icone" />
+                </button>
+              </div>
+            </li>
+            <li>
+              <div>
+                <img src="images/montre2.png" alt="icone" class="montre-cart" />
+              </div>
+              <p>50$</p>
+              <span>
+                <button>-</button>
+                <input type="number" min="1" max="99" />
+                <button>+</button>
+              </span>
+              <div>
+                <button class="btn">
+                  <img src="images/delete.png" alt="icone" />
+                </button>
+              </div>
+            </li>
+            <li>
+              <div>
+                <img src="images/montre2.png" alt="icone" class="montre-cart" />
+              </div>
+              <p>50$</p>
+              <span>
+                <button>-</button>
+                <input type="number" min="1" max="99" />
+                <button>+</button>
+              </span>
+              <div>
+                <button class="btn">
+                  <img src="images/delete.png" alt="icone" />
+                </button>
+              </div>
+            </li>
+            <li>
+              <div>
+                <img src="images/montre2.png" alt="icone" class="montre-cart" />
+              </div>
+              <p>50$</p>
+              <span>
+                <button>-</button>
+                <input type="number" min="1" max="99" />
+                <button>+</button>
+              </span>
+              <div>
+                <button class="btn">
+                  <img src="images/delete.png" alt="icone" />
+                </button>
+              </div>
+            </li>
+            <li>
+              <div>
+                <img src="images/montre2.png" alt="icone" class="montre-cart" />
+              </div>
+              <p>50$</p>
+              <span>
+                <button>-</button>
+                <input type="number" min="1" max="99" />
+                <button>+</button>
+              </span>
+              <div>
+                <button class="btn">
+                  <img src="images/delete.png" alt="icone" />
+                </button>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <footer>
+          <p>Total : 00$</p>
+        </footer>
+        <div class="payement">
+          <img src="images/cb_icon.png" alt="cb_icon" />
+          <img src="images/paypal_icon_2.png" alt="cb_icon" />
+        </div>
+      </div>
     </main>
 
     <footer>
-        <a href="" target="blank">
-            <img class="logo" src="./images/instagram_logo.png" alt="instagram" /></a>
-        <a href="" target="blank">
-            <img class="logo" src="./images/facebook_logo.png" alt="facebook" /></a>
-        <a href="" target="blank">
-            <img class="logo" src="./images/twitter_logo.png" alt="twitter" /></a>
-        <a href="" target="blank">
-            <img class="logo" src="./images/youtube_logo.png" alt="youtube" /></a>
+      <a href="" target="blank">
+        <img class="logo" src="./images/instagram_logo.png" alt="instagram"
+      /></a>
+      <a href="" target="blank">
+        <img class="logo" src="./images/facebook_logo.png" alt="facebook"
+      /></a>
+      <a href="" target="blank">
+        <img class="logo" src="./images/twitter_logo.png" alt="twitter"
+      /></a>
+      <a href="" target="blank">
+        <img class="logo" src="./images/youtube_logo.png" alt="youtube"
+      /></a>
     </footer>
-</body>
-
+  </body>
 </html>
